# as5048b_magnetic_encoder

./: Cargo.toml  README.md  datasheet_i2c.md
examples/esp32c6/: Cargo.toml  README.md
src/: lib.rs
