[package]
name = "as5048b_magnetic_encoder"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0"
defmt = { version = "1.0", optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.11", default-features = false, features = ["eh1"] }

[features]
default = []
defmt = ["dep:defmt"]
